demo-grpc/client-web-golang/kubernetes/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
    name: demo-grpc-client-web-golang
    labels:
        name: demo-grpc-client-web-golang
        app: demo-grpc
spec:
    rules:
        - host: demo-web-golang.hello.local
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: demo-grpc-client-web-golang
                        servicePort: http
